# EasyConsole

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AUDIT.md  DESIGN.md  PRODUCT.md  README.md  RELEASE_NOTES.md  api_documentation.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tools.json  vite.config.ts
.github/workflows/: android-ci.yml  ci.yml  release.yml
.impeccable/critique/: 2026-06-20T04-38-24Z__src.md  2026-06-20T07-18-01Z__src.md  2026-06-24T05-01-20Z__src.md  2026-06-28T14-23-50Z__rc-components-appshell-tsx-src-pages-loginpage-tsx.md  2026-06-28T14-47-28Z__rc-components-appshell-tsx-src-pages-loginpage-tsx.md
.trae/documents/: fix-p0-issues.md  fix-p1-cli-mcp-capabilities.md  fix-p1-issues.md  fix-p1-remaining.md  fix-p2-all.md  fix-p3-all.md
reference/original-console/: README.md  index.html
reference/original-console/static/css/: app.bad2923b.css  chunk-libs.340c8ce8.css
reference/original-console/static/js/: app.f36c1631.js  chunk-libs.f6c486ba.js
skills/easy-console-ai/: SKILL.md
skills/easy-console-ai/agents/: openai.yaml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.test.tsx  AppShell.tsx  AppUpdateDialog.tsx  BackgroundScheduledTaskRunner.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  DataState.test.tsx  DataState.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  LanguageSwitch.tsx  ProtectedRoute.tsx  ReleaseConditionBadge.tsx  RunLoggerProvider.tsx  ShortcutsDialog.tsx  StatusBadge.tsx  TaskNotificationWatcher.tsx  Toast.tsx  TrayMenu.tsx  form-fields.tsx  ui.tsx
src/components/images/: ImageDetailDialog.tsx
src/components/storage/: RemoteStoragePicker.tsx
src/components/tasks/: AppSshTerminalDialog.tsx  CreateTaskDialog.test.tsx  CreateTaskDialog.tsx  ResourcePriceFields.tsx  SftpPanel.tsx  SshTerminalTab.tsx  TaskInstanceName.test.tsx  TaskInstanceName.tsx  TaskLogDialog.test.tsx  TaskLogDialog.tsx  TerminalDialog.test.tsx  TerminalDialog.tsx
src/lib/: api-client.test.ts  api-client.ts  api-factory.test.ts  api-factory.ts  api.ts  app-settings.test.ts  app-settings.ts  app-update-context.tsx  app-update.test.ts  app-update.ts  auth-context.tsx  auth-state.ts  backup-crypto.test.ts  backup-crypto.ts  batch.ts  commit-queue-context.tsx  crypto.test.ts  crypto.ts  download-queue-context.tsx  download-queue.test.ts  download-queue.ts  download.test.ts  download.ts  fetch-all-tasks.test.ts  fetch-all-tasks.ts  format.test.ts  format.ts  i18n-text.ts  i18n.test.tsx  i18n.tsx  image-favorites.ts  local-data-backup.test.ts  local-data-backup.ts  md5.test.ts  md5.ts  md5.worker.ts  monitor-dashboard-core.ts  monitor-dashboard.test.ts  monitor-dashboard.ts  password-crypto.test.ts  (+61 more)
src/pages/: DashboardPage.test.tsx  DashboardPage.tsx  ImagesPage.test.tsx  ImagesPage.tsx  LoginPage.test.tsx  LoginPage.tsx  RunLogsPage.test.tsx  RunLogsPage.tsx  ScheduledTasksPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  SshTerminalPage.tsx  StoragePage.test.tsx  StoragePage.tsx  TaskDetailPage.tsx  TaskTemplatesPage.tsx  TasksPage.menu.test.tsx  TasksPage.tsx
src/pages/tasks/: use-task-list-controller.ts
src/test/: setup.ts
tools/easy-console/: build-desktop.mjs  build-sidecars.mjs  cli-entry.ts  cli.test.ts  cli.ts  config.test.ts  config.ts  context.ts  local-data-store.test.ts  local-data-store.ts  mcp-entry.ts  mcp-server.ts  mcp-tools.test.ts  mcp-tools.ts  node-runtime.test.ts  node-runtime.ts  operations.ts  run-log-store.ts  version-check.mjs
