[package]
name = "easy-console"
version = "0.1.1"
description = "EasyConsole desktop shell"
authors = ["EasyConsole"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "easy_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
russh = { version = "0.61.0", default-features = false, features = ["ring", "rsa"] }
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-websocket = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.48.0", features = ["macros", "sync", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
