[package]
name = "easy-console"
version = "0.4.9"
description = "EasyConsole desktop shell"
authors = ["EasyConsole"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "easy_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-websocket = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.48.0", features = ["macros", "sync", "time", "io-util", "net", "fs"] }
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
russh = { version = "0.61.0", default-features = false, features = ["ring", "rsa"] }
russh-sftp = { version = "2.3.0", default-features = false }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"

# Desktop-only (not available/needed on Android/iOS) dependencies.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
keyring = "3"
